--- a/image_recognition_color_extractor/package.xml
+++ b/image_recognition_color_extractor/package.xml
@@ -11,6 +11,9 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
+  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
+
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>image_recognition_msgs</exec_depend>
   <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
