--- a/image_recognition_keras/package.xml
+++ b/image_recognition_keras/package.xml
@@ -16,16 +16,14 @@
   <exec_depend>diagnostic_updater</exec_depend>
   <exec_depend>image_recognition_msgs</exec_depend>
   <exec_depend>image_recognition_util</exec_depend>
-  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-keras-pip</exec_depend>
-  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-keras-pip</exec_depend>
+  <exec_depend>python-keras-pip</exec_depend>
   <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
   <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
   <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-opencv</exec_depend>
   <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-opencv</exec_depend>
   <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-packaging</exec_depend>
   <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-packaging</exec_depend>
-  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-tensorflow-pip</exec_depend>
-  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-tensorflow-pip</exec_depend>
+  <exec_depend>python-tensorflow-pip</exec_depend>
   <exec_depend>rospy</exec_depend>
 
   <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
