--- a/image_recognition_tensorflow/package.xml
+++ b/image_recognition_tensorflow/package.xml
@@ -20,8 +20,7 @@
   <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
   <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-six</exec_depend>
   <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-six</exec_depend>
-  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-tensorflow-pip</exec_depend>
-  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-tensorflow-pip</exec_depend>
+  <exec_depend>python-tensorflow-pip</exec_depend>
   <exec_depend>rospy</exec_depend>
 
   <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
