--- a/image_recognition_skybiometry/package.xml
+++ b/image_recognition_skybiometry/package.xml
@@ -15,6 +15,7 @@
   <exec_depend>image_recognition_msgs</exec_depend>
   <exec_depend>image_recognition_util</exec_depend>
   <exec_depend>python-future</exec_depend>
+  <exec_depend>python-requests</exec_depend>
   <exec_depend>rospy</exec_depend>
 
   <test_depend>python-catkin-lint</test_depend>
