--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
         uses: tue-robotics/tue-env/ci/modified-packages@master
         with:
           commit-range: ${{ steps.commit-range.outputs.commit-range }}
+          ignored-packages: image_recognition_jetson
   tue-ci:
     name: TUe CI - ${{ matrix.package }}
     runs-on: ubuntu-latest
