--- a/image_recognition_rqt/package.xml
+++ b/image_recognition_rqt/package.xml
@@ -27,8 +27,13 @@
   <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
   <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
 
-  <!-- The export tag contains other, unspecified, tags -->
+  <doc_depend condition="$ROS_PYTHON_VERSION == 2">python-sphinx</doc_depend>
+  <doc_depend condition="$ROS_PYTHON_VERSION == 3">python3-sphinx</doc_depend>
+  <doc_depend>python-sphinx-autoapi-pip</doc_depend>
+  <doc_depend>python-sphinx-rtd-theme-pip</doc_depend>
+
   <export>
+    <rosdoc config="rosdoc.yaml" />
     <rqt_gui plugin="${prefix}/plugin.xml"/>
   </export>
 </package>
