--- a/image_recognition_keras/package.xml
+++ b/image_recognition_keras/package.xml
@@ -31,6 +31,8 @@
   <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
   <test_depend condition="$ROS_PYTHON_VERSION == 2">python-future</test_depend>
   <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-future</test_depend>
+  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</test_depend>
+  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</test_depend>
 
   <doc_depend condition="$ROS_PYTHON_VERSION == 2">python-sphinx</doc_depend>
   <doc_depend condition="$ROS_PYTHON_VERSION == 3">python3-sphinx</doc_depend>
