--- a/image_recognition_tensorflow/package.xml
+++ b/image_recognition_tensorflow/package.xml
@@ -30,6 +30,8 @@
 
   <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
   <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
+  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</test_depend>
+  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</test_depend>
 
   <doc_depend condition="$ROS_PYTHON_VERSION == 2">python-sphinx</doc_depend>
   <doc_depend condition="$ROS_PYTHON_VERSION == 3">python3-sphinx</doc_depend>
