--- a/.github/workflows/industrial_ci.yml
+++ b/.github/workflows/industrial_ci.yml
@@ -15,7 +15,7 @@ jobs:
         env:
           - ROS_DISTRO: melodic
             ROS_REPO: main
-            BEFORE_INSTALL_TARGET_DEPENDENCIES: "pip install --upgrade pip && hash -r pip && pip install --upgrade --progress-bar=off enum34 pyasn1-modules 'tensorflow>=2.1' 'keras<2.4' 'grpcio<=1.39'"
+            BEFORE_INSTALL_TARGET_DEPENDENCIES: "pip install --upgrade pip && hash -r pip && pip install --upgrade --progress-bar=off enum34 pyasn1-modules 'tensorflow>=2.1' 'keras<2.4' 'grpcio<=1.39' 'protobuf<3.18'"
             ADDITIONAL_DEBS: python-pip
           - ROS_DISTRO: noetic
             ROS_REPO: main
