--- a/image_recognition_skybiometry/package.xml
+++ b/image_recognition_skybiometry/package.xml
@@ -32,5 +32,12 @@
   <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
   <test_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</test_depend>
   <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</test_depend>
+  
+  <doc_depend condition="$ROS_PYTHON_VERSION == 2">python-sphinx</doc_depend>
+  <doc_depend condition="$ROS_PYTHON_VERSION == 3">python3-sphinx</doc_depend>
+  <doc_depend>python-sphinx-autoapi-pip</doc_depend>
+  <doc_depend>python-sphinx-rtd-theme-pip</doc_depend>
+  <doc_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</doc_depend>
+  <doc_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</doc_depend>
 
 </package>
