--- a/image_recognition_pytorch/package.xml
+++ b/image_recognition_pytorch/package.xml
@@ -21,6 +21,7 @@
   <exec_depend>python3-numpy</exec_depend>
   <exec_depend>python3-opencv</exec_depend>
   <exec_depend>python3-onnxruntime-pip</exec_depend>
+  <exec_depend>python3-pytorch-pip</exec_depend>
   <exec_depend>rospy</exec_depend>
 
   <test_depend>python3-catkin-lint</test_depend>
