--- a/image_recognition/package.xml
+++ b/image_recognition/package.xml
@@ -12,6 +12,7 @@
   <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
 
+  <exec_depend>image_recognition_age_gender</exec_depend>
   <exec_depend>image_recognition_analysis</exec_depend>
   <exec_depend>image_recognition_color_extractor</exec_depend>
   <exec_depend>image_recognition_keras</exec_depend>
