--- a/image_recognition_age_gender/CMakeLists.txt
+++ b/image_recognition_age_gender/CMakeLists.txt
@@ -8,6 +8,7 @@ catkin_python_setup()
 catkin_package()
 
 install(PROGRAMS
+  scripts/download_model
   scripts/face_properties_node
   scripts/get_face_properties
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
