--- a/image_recognition_age_gender/package.xml
+++ b/image_recognition_age_gender/package.xml
@@ -21,7 +21,7 @@
   <exec_depend>python3-numpy</exec_depend>
   <exec_depend>python3-opencv</exec_depend>
   <exec_depend>python3-onnxruntime-gpu-pip</exec_depend>
-  <exec_depend>python-pytorch-pip</exec_depend>
+  <exec_depend>python3-pytorch-pip</exec_depend>
   <exec_depend>rospy</exec_depend>
 
   <test_depend>catkin_lint_cmake</test_depend>
