--- a/.github/workflows/industrial_ci.yml
+++ b/.github/workflows/industrial_ci.yml
@@ -18,7 +18,7 @@ jobs:
             BEFORE_INSTALL_TARGET_DEPENDENCIES: "pip3 install --upgrade pip && hash -r pip3 && pip3 install --upgrade --progress-bar=off 'scipy>=1.5'"
             ADDITIONAL_DEBS: python3-pip
     env:
-      CCACHE_DIR: /home/runner/.ccache # Directory for ccache (and how we enable ccache in industrial_ci)
+      CCACHE_DIR: ${{ github.workspace }}/.ccache # Directory for ccache (and how we enable ccache in industrial_ci)
       UPSTREAM_WORKSPACE: 'github:tue-robotics/catkin_lint_cmake#master'
     runs-on: ubuntu-latest
     steps:
