--- a/image_recognition_tensorflow/package.xml
+++ b/image_recognition_tensorflow/package.xml
@@ -21,7 +21,7 @@
   <exec_depend>python3-opencv</exec_depend>
   <exec_depend>python3-numpy</exec_depend>
   <exec_depend>python3-six</exec_depend>
-  <exec_depend>python-tensorflow-pip</exec_depend>
+  <exec_depend version_gte="2.13.0">python-tensorflow-pip</exec_depend>
   <exec_depend>rospy</exec_depend>
 
   <test_depend>catkin_lint_cmake</test_depend>
