--- a/image_recognition_pose_estimation/package.xml
+++ b/image_recognition_pose_estimation/package.xml
@@ -19,6 +19,7 @@
 
   <exec_depend>python3-numpy</exec_depend>
   <exec_depend>python3-opencv</exec_depend>
+  <exec_depend>python3-pytorch-pip</exec_depend>
   <exec_depend>python3-ultralytics-pip</exec_depend>
   <exec_depend>rospy</exec_depend>
 
